[gd_scene load_steps=8 format=3 uid="uid://uaml3ixos4wd"]

[ext_resource type="Script" uid="uid://dgeo2k14sok5o" path="res://scripts/Joy/walletLooting.gd" id="1_xq8nx"]
[ext_resource type="Script" uid="uid://cqeehqx74owvt" path="res://scripts/Joy/wallet_looting_button.gd" id="2_rpauf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a1jyd"]
bg_color = Color(0.23, 0.23, 0.23, 0.6627451)

[sub_resource type="ViewportTexture" id="ViewportTexture_i3pb6"]
viewport_path = NodePath("Item1Button/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_rpauf"]
viewport_path = NodePath("Item2Button/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_egxmw"]
viewport_path = NodePath("Item3Button/SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_xeiku"]
viewport_path = NodePath("Item4Button/SubViewport")

[node name="WalletLooting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xq8nx")

[node name="Background" type="Panel" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a1jyd")

[node name="DescriptionBg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.69
anchor_top = 0.18
anchor_right = 0.91
anchor_bottom = 0.57
offset_left = -6.1035156e-05
offset_right = -0.40014648
offset_bottom = -0.15200806

[node name="ItemDescription" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.70000005
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.54
offset_left = -6.1035156e-05

[node name="TitleLabel" type="Label" parent="ItemDescription"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "Item Name"

[node name="DescriptionLabel" type="Label" parent="ItemDescription"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 10
text = "Description"

[node name="Item1Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.6
anchor_right = 0.4
anchor_bottom = 0.8
icon = SubResource("ViewportTexture_i3pb6")
expand_icon = true
script = ExtResource("2_rpauf")

[node name="SubViewport" type="SubViewport" parent="Item1Button"]
size = Vector2i(1197, 667)

[node name="Item2Button" type="Button" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.55
anchor_right = 0.45
anchor_bottom = 0.75
offset_right = 8.0
offset_bottom = 8.0
icon = SubResource("ViewportTexture_rpauf")
expand_icon = true
script = ExtResource("2_rpauf")

[node name="SubViewport" type="SubViewport" parent="Item2Button"]
size = Vector2i(1197, 667)

[node name="Item3Button" type="Button" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.7
offset_right = 8.0
offset_bottom = 8.0
icon = SubResource("ViewportTexture_egxmw")
expand_icon = true
script = ExtResource("2_rpauf")

[node name="SubViewport" type="SubViewport" parent="Item3Button"]
size = Vector2i(1197, 667)

[node name="Item4Button" type="Button" parent="."]
z_index = -3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_top = 0.45
anchor_right = 0.55
anchor_bottom = 0.65
offset_right = 8.0
offset_bottom = 8.0
icon = SubResource("ViewportTexture_xeiku")
expand_icon = true
script = ExtResource("2_rpauf")

[node name="SubViewport" type="SubViewport" parent="Item4Button"]
size = Vector2i(1197, 667)

[connection signal="focus_entered" from="Item1Button" to="Item1Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Item1Button" to="Item1Button" method="_on_focus_exited"]
[connection signal="focus_entered" from="Item2Button" to="Item2Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Item2Button" to="Item2Button" method="_on_focus_exited"]
[connection signal="focus_entered" from="Item3Button" to="Item3Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Item3Button" to="Item3Button" method="_on_focus_exited"]
[connection signal="focus_entered" from="Item4Button" to="Item4Button" method="_on_focus_entered"]
[connection signal="focus_exited" from="Item4Button" to="Item4Button" method="_on_focus_exited"]
